--- a/index.html
+++ b/index.html
@@ -37,5 +37,167 @@
     <div class="radius-bg-1">
         <div class="bg-1"></div>
     </div>
+    <section class="why-block">
+        <div class="why-thrive">
+            <h2 class="h2-title">Why Thrive?</h2>
+            <p class="why-text">Want to improve your well-being from the comfort<br> of your own couch? Are you having trouble finding<br> the right therapist? <small>Here at ThriveTalk, our licensed<br> therapists provide the same quality care you would get in office<br> from anywhere you can access your laptop or mobile phone.<br> Become your best self with ThriveTalk.  Start therapy now with a<br> licensed therapist!</small></p>
+        </div>
+        <div class="bg-img-1"></div>
+    </section>
+    <section class="about-block">
+        <p class="about-title">ABOUT US</p>
+        <p class="about-text">We want to help you thrive! Whether you are just<br> looking for someone to talk to, or are struggling with a<br> mental wellness issue we’re here to help.  Our highly<br> talented therapists can help you with a range of issues<br> including relationships, sex, PTSD, depression, social<br> anxiety, or even just caring for yourself more.</p>
+    </section>
+    <section class="help-block-top">
+        <p class="help-text">WE CAN HELP YOU WITH</p>
+        <div class="flex-container">
+            <div class="flex-item-1">
+                <hr class="top-hr">
+                <ul class="solo-list">
+                    <li><span class="li-text">Weight Lifting</span></li>
+                </ul>
+            </div>
+            <div class="flex-item-2">
+                <hr class="top-hr">
+                <ul class="solo-list">
+                    <li><span class="li-text">Running  & Spinning</span></li>
+                </ul>
+            </div>
+            <div class="flex-item-3">
+                <hr class="top-hr">
+                <ul class="solo-list">
+                    <li><span class="li-text">Pumping Iron</span></li>
+                </ul>
+            </div>
+            <div class="flex-item-4">
+                <hr class="top-hr">
+                <ul class="solo-list">
+                    <li><span class="li-text">Pumping Iron</span></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section class="help-block-bottom">
+        <div class="flex-container">
+            <div class="flex-item-2-1">
+                <hr class="top-hr">
+                <ul class="solo-list-2">
+                    <li><span class="li-text">Physical<br> Health</span></li>
+                </ul>
+            </div>
+            <div class="flex-item-2-2">
+                <hr class="top-hr">
+                <ul class="solo-list-2">
+                    <li><span class="li-text">Mental<br> Health</span></li>
+                </ul>
+            </div>
+            <div class="flex-item-2-3">
+                <hr class="top-hr">
+                <ul class="solo-list-2">
+                    <li><span class="li-text">Nutrition</span></li>
+                </ul>
+            </div>
+            <div class="flex-item-2-4">
+                <hr class="top-hr">
+                <ul class="solo-list-2">
+                    <li><span class="li-text">Gymnastics</span></li>
+                </ul>
+            </div>
+            <div class="flex-item-2-5">
+                <hr class="top-hr">
+                <ul class="solo-list-2">
+                    <li><span class="li-text">Crossfit</span></li>
+                </ul>
+            </div>
+            <div class="flex-item-2-6">
+                <hr class="top-hr">
+                <ul class="solo-list-2">
+                    <li><span class="li-text">Aerobics</span></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section class="services-description">
+        <div class="flex-container">
+            <div class="services-flex-item block-1">
+                <h3 class="h3-title">Nutritional Plans</h3>
+                <p class="services-text">Nutritional Facts on some shitty things that<br> you don’t care about and even we don’t , I<br> need to replace this copy.</p>
+            </div>
+            <div class="services-flex-item block-2">
+                <h3 class="h3-title">Weight Loss</h3>
+                <p class="services-text">Nutritional Facts on some shitty things that<br> you don’t care about and even we don’t , I<br> need to replace this copy.</p>
+            </div>
+            <div class="services-flex-item block-3">
+                <h3 class="h3-title">Mental Peace</h3>
+                <p class="services-text">Nutritional Facts on some shitty things that<br> you don’t care about and even we don’t , I<br> need to replace this copy.</p>
+            </div>
+            <div class="services-flex-item block-4">
+                <h3 class="h3-title">Home Training</h3>
+                <p class="services-text">Nutritional Facts on some shitty things that<br> you don’t care about and even we don’t , I<br> need to replace this copy.</p>
+            </div>
+            <div class="services-flex-item block-5">
+                <h3 class="h3-title">Work/Life Balance</h3>
+                <p class="services-text">Nutritional Facts on some shitty things that<br> you don’t care about and even we don’t , I<br> need to replace this copy.</p>
+            </div>
+            <div class="services-flex-item block-6">
+                <h3 class="h3-title">Cardio</h3>
+                <p class="services-text">Nutritional Facts on some shitty things that<br> you don’t care about and even we don’t , I<br> need to replace this copy.</p>
+            </div>
+        </div>
+    </section>
+    <section class="additional-info">
+        <div class="flex-container">
+            <div class="additional-info-bg"></div>
+            <div class="additional-info-content">
+                <p class="additional-info-text">YOU SHOULD ALSO KNOW</p>
+                <p class="additional-info-title">MDD affects more than 16.1 million<br> American adults, or about 6.7%of the U.S.<br> population age 18 and older in a given year.<br> We at <span class="company-name">ThriveTalk</span> can help you.</p>
+                <p class="additional-info-link-container"><a href="#" class="additional-info-link">GET HELP NOW</a></p>
+            </div>
+        </div>
+    </section>
+    <section class="smile-block">
+        <div class="flex-container">
+            <div class="smile-block-content">
+                <p class="smile-block-text">CONTACT US</p>
+                <h2 class="h2-title">Ready. Set. Smile</h2>
+                <p class="smile-block-title">Take the free online assessment to<br> see if you are a candidate and get<br> started on your journey.</p>
+                <p class="smile-block-link-container"><a href="#" class="smile-block-link">GET HELP NOW</a></p>
+            </div>
+            <div class="smile-block-bg"></div>
+        </div>
+    </section>
+    <section class="some-info">
+        <div class="flex-container">
+            <div class="some-info-bg"></div>
+            <div class="some-info-content">
+                <div class="flex-item">
+                    <span class="ul-title">SOME INFO</span>
+                    <ul class=" info-ul some-info-ul ">
+                        <li>Lorem ipsum dolor sit amet,<br> consectetuer adipiscing elit.<br> Aenean commodo ligula.</li>
+                    </ul>
+                </div>
+                <div class="flex-item enfold-health">
+                    <span class="ul-title">ENFOLD HEALTH</span>
+                    <ul class=" info-ul">
+                        <li>Main Street 1, Olcott<br> Buffalo, United States</li>
+                        <li class="phone-number">+555 283 784 333<br> <a href="#" class="email">office@enfold-health.com</a></li>
+                    </ul>
+                </div>
+                <div class="flex-item office-hours">
+                     <span class="ul-title">OFFICE HOURS</span>
+                    <ul class=" info-ul ">
+                        <li>Mo-Fr: 8:00-19:00</li>
+                        <li>Sa: 8:00-14:00</li>
+                        <li>Su: closed</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="footer">
+        <ul class="footer-list">
+            <li><a href="#" class="footer-link">© Copyright - ThriveTalk  2017</a></li>
+        </ul>
+    </div>
 </body>
 </html>
